# booking-api

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/: main.py  setup.py
src/database/: setup.py  tables.py
src/dependencies/: database.py
src/domain/clients/: __init__.py  client.py  login.py
src/domain/resources/: resources.py  transactions.py
src/models/clients/: __init__.py  client.py
src/models/resources/: resources.py
src/repositories/: clients.py  resources.py
src/routers/: clients.py  resources.py
src/utils/: security.py
tests/: conftest.py  constants.py  test_resources_routers.py
tests/mock/: generators.py  resources_repo.py
